--- a/ugd-server/src/main/resources/application.yaml
+++ b/ugd-server/src/main/resources/application.yaml
@@ -30,11 +30,16 @@ spring:
       time-to-live: 1h # 设置过期时间为 1 小时
 
 server:
+  tomcat:
+    connection-timeout: 6000s  # 连接超时
+    keep-alive-timeout: 6000s  # keep-alive超时
   servlet:
     encoding:
       enabled: true
       charset: UTF-8 # 必须设置 UTF-8，避免 WebFlux 流式返回（AI 场景）会乱码问题
       force: true
+    session:
+      timeout: 6000s  # session超时
 
 --- #################### 接口文档配置 ####################
 
